--- a/exonum/Cargo.toml
+++ b/exonum/Cargo.toml
@@ -20,6 +20,7 @@ byteorder = "1.1.0"
 hex = "0.3.0"
 bit-vec = "0.4.4"
 rand = "0.4.2"
+semver = "0.9.0"
 serde = "1.0.10"
 serde_derive = "1.0.10"
 serde_json = "1.0.2"
